Add atkins algorithm. Add timer for checking execution time. Add integration tests and remainder of service tests
